--- a/src/sass/global/mobileSearch.scss
+++ b/src/sass/global/mobileSearch.scss
@@ -25,6 +25,7 @@
 	width: 100%;
 	display: none;
 	box-shadow: none;
+	z-index: 150;
 	border-bottom: 1px solid #ced4da;
 	.navbar-form{
 		display: flex;
